# AyWizz

./: .dockerignore  .env.dev  .env.example  .gitignore  CLAUDE.md  README.md
ay_platform_core/: pyproject.toml
ay_platform_core/scripts/: docker_test_cleanup.sh  e2e_stack.sh  run_coherence_checks.sh  run_k8s_system_tests.sh  run_tests.sh  seed_demo_ux.py  seed_e2e.py
ay_platform_core/scripts/checks/: audit_functional_coverage.py  audit_implementation_status.py  check_canonical_imports.py  check_no_parallel_definitions.py  check_pydantic_schemas_valid.py  check_router_typing.py  check_schema_isolation.py  generate_test_matrix_doc.py
ay_platform_core/src/ay_platform_core/: __init__.py
ay_platform_core/src/ay_platform_core/_mock_llm/: __init__.py  main.py
ay_platform_core/src/ay_platform_core/_observability/: __init__.py  buffer.py  collector.py  main.py  parser.py  synthesis.py
ay_platform_core/src/ay_platform_core/_sub_agent/: __init__.py  __main__.py  config.py  models.py  runtime.py
ay_platform_core/src/ay_platform_core/c2_auth/: __init__.py  admin_router.py  config.py  gitea_client.py  main.py  models.py  preferences_router.py  projects_router.py  router.py  service.py  ux_router.py
ay_platform_core/src/ay_platform_core/c3_conversation/: __init__.py  document_tools.py  main.py  models.py  router.py  service.py
ay_platform_core/src/ay_platform_core/c4_orchestrator/: __init__.py  artifacts_models.py  artifacts_router.py  artifacts_service.py  artifacts_storage.py  bundle_builder.py  config.py  dispatch_storage.py  documents_router.py  main.py  models.py  router.py  service.py  source_router.py  state.py
ay_platform_core/src/ay_platform_core/c5_requirements/: __init__.py  config.py  main.py  models.py  router.py  service.py
ay_platform_core/src/ay_platform_core/c6_validation/: __init__.py  config.py  main.py  models.py  router.py  service.py
ay_platform_core/src/ay_platform_core/c7_memory/: __init__.py  artifacts.py  config.py  main.py  models.py  remote.py  router.py  service.py
ay_platform_core/src/ay_platform_core/c8_llm/: __init__.py  catalog.py  client.py  config.py  cost.py  models.py  validator.py
ay_platform_core/src/ay_platform_core/c9_mcp/: __init__.py  config.py  main.py  models.py  remote.py  router.py  server.py
ay_platform_core/src/ay_platform_core/observability/: __init__.py  auth_guard.py  config.py  context.py  formatter.py  http_client.py  middleware.py  setup.py
ay_platform_core/tests/: .env.test  __init__.py  conftest.py  docker-compose.dev.override.yml  docker-compose.yml
ay_platform_core/tests/coherence/: __init__.py  test_compose_dev_profile.py  test_env_completeness.py  test_functional_coverage.py  test_interface_consistency.py  test_relation_markers.py  test_route_catalog.py
ay_platform_core/tests/contract/: __init__.py
ay_platform_core/tests/contract/c1_gateway/: test_route_declarations.py
ay_platform_core/tests/contract/c2_auth/: __init__.py  test_endpoint_contracts.py  test_jwt_schema.py  test_rbac_schema.py
ay_platform_core/tests/contract/c3_conversation/: test_endpoints.py  test_schemas.py
ay_platform_core/tests/contract/c4_orchestrator/: test_schemas.py
ay_platform_core/tests/contract/c5_requirements/: test_endpoints.py  test_schemas.py
ay_platform_core/tests/contract/c6_validation/: test_schemas.py
ay_platform_core/tests/contract/c7_memory/: test_schemas.py
ay_platform_core/tests/contract/c8_llm/: test_client_headers.py  test_schemas.py
ay_platform_core/tests/contract/c9_mcp/: test_schemas.py  test_tool_schemas.py
ay_platform_core/tests/contract/config_override/: test_config_override.py
ay_platform_core/tests/e2e/: conftest.py  test_golden_path.py
ay_platform_core/tests/e2e/auth_matrix/: _backend.py  _catalog.py  _clients.py  _stack.py  conftest.py  test_anonymous_access.py  test_auth_modes.py  test_backend_state.py  test_isolation.py  test_role_matrix.py
ay_platform_core/tests/fixtures/: __init__.py  containers.py  contract_registry.py  observability_containers.py
ay_platform_core/tests/integration/: __init__.py
ay_platform_core/tests/integration/_credentials/: test_arango_ay_app.py  test_minio_ay_app.py
ay_platform_core/tests/integration/_smoke/: test_v1_contract_pin.py
ay_platform_core/tests/integration/c1_gateway/: test_routing.py
ay_platform_core/tests/integration/c2_auth/: __init__.py  conftest.py  test_account_lock.py  test_admin_endpoints.py  test_demo_seed.py  test_gitea_provisioning.py  test_local_admin_bootstrap.py  test_local_login_flow.py  test_local_tenant_manager_bootstrap.py  test_none_mode_integration.py  test_tenant_project_lifecycle.py  test_ux_config.py
ay_platform_core/tests/integration/c3_conversation/: conftest.py  test_conversation_flow.py  test_rag_chat_flow.py
ay_platform_core/tests/integration/c4_orchestrator/: conftest.py  test_artifacts_api.py  test_documents_api.py  test_documents_structural_ops.py  test_generate_materialisation.py  test_k8s_dispatcher_e2e.py  test_nats_publisher_e2e.py  test_pipeline_flow.py  test_real_llm.py  test_source_api.py  test_trace_and_steer_api.py
ay_platform_core/tests/integration/c5_requirements/: conftest.py  test_crud_flow.py  test_entity_operations.py  test_import.py  test_storage_verified.py  test_v1_5_upgrade.py
ay_platform_core/tests/integration/c6_validation/: conftest.py  test_run_flow.py  test_storage_verified.py
ay_platform_core/tests/integration/c7_memory/: conftest.py  test_artifact_rebuild.py  test_auto_kg_extraction.py  test_blob_download.py  test_kg_extraction.py  test_kg_hybrid_retrieve.py  test_kg_summary.py  test_processing_version.py  test_real_embedder.py  test_remote_service.py  test_retrieval_flow.py  test_storage_verified.py  test_upload_pipeline.py
ay_platform_core/tests/integration/c8_llm/: test_client_end_to_end.py  test_real_ollama.py
ay_platform_core/tests/system/: conftest.py  test_gateway_paths.py  test_golden_path_orchestrator.py  test_mcp_tool_flows.py  test_tcp_layer.py  test_uploads_routing.py  test_uploads_to_retrieval.py
ay_platform_core/tests/unit/: __init__.py
(+476 files in other folders)
